syntax = "proto3";

package domain;

message ApplicationRegistrationCreated {
    string aggregateId = 1;
    string name = 2;
    string description = 3;
    int64 createTimestamp = 4;
    string clientID = 5;
}